ci: enable spellcheck with cspell

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,3 +58,6 @@ jobs:
 
             - name: Test
               run: yarn test:coverage
+
+            - name: Spell Check
+              run: yarn spellcheck
