--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
 		"node": true,
 		"jest": true
 	},
-	"plugins": ["@typescript-eslint", "jsdoc", "eslint-comments", "import"],
+	"plugins": ["@typescript-eslint", "jsdoc", "eslint-comments", "import", "sort-class-members"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"sourceType": "module",
@@ -62,6 +62,22 @@
 					"order": "asc"
 				},
 				"newlines-between": "always"
+			}
+		],
+
+		"sort-class-members/sort-class-members": [
+			1,
+			{
+				"order": [
+					"[static-properties]",
+					"[static-methods]",
+					"[properties]",
+					"[conventional-private-properties]",
+					"constructor",
+					"[methods]",
+					"[conventional-private-methods]"
+				],
+				"accessorPairPositioning": "getThenSet"
 			}
 		]
 	},
