--- a/website/package.json
+++ b/website/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
-    "@markuplint/rules": "^3.0.0-alpha.0",
+    "@markuplint/rules": "3.0.0-alpha.0",
     "next": "^12.1.4",
     "next-mdx-remote": "^4.0.2",
     "normalize.css": "^8.0.1",
