--- a/packages/@markuplint/selector/package.json
+++ b/packages/@markuplint/selector/package.json
@@ -24,7 +24,7 @@
 	"devDependencies": {
 		"@markuplint/ml-spec": "3.0.0-alpha.0",
 		"@types/debug": "^4.1.7",
-		"@types/jsdom": "^16.2.14",
-		"jsdom": "^19.0.0"
+		"@types/jsdom": "16",
+		"jsdom": "19"
 	}
 }
