--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -16,13 +16,10 @@
 		"dev": "tsc --build --watch",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {
-		"@types/parse5": "^6.0.3"
-	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.0.0-alpha.0",
 		"@markuplint/parser-utils": "3.0.0-alpha.0",
-		"parse5": "^6.0.1",
-		"tslib": "^2.3.1"
+		"parse5": "6",
+		"tslib": "^2.4.0"
 	}
 }
