--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"@markuplint/ml-ast": "3.0.0-alpha.0",
 		"@markuplint/types": "3.0.0-alpha.0",
-		"tslib": "^2.3.1",
-		"uuid": "^8.3.2"
+		"tslib": "^2.4.0",
+		"uuid": "8"
 	}
 }
