--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -25,8 +25,8 @@
 	},
 	"devDependencies": {
 		"@types/bcp-47": "1",
-		"@types/css-tree": "^1.0.7",
+		"@types/css-tree": "1",
 		"@types/debug": "^4.1.7",
-		"@types/whatwg-mimetype": "^2.1.1"
+		"@types/whatwg-mimetype": "2"
 	}
 }
