--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
 		"eslint-import-resolver-typescript": "^3.5.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsdoc": "38",
+		"eslint-plugin-jsdoc": "^39.3.6",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-sort-class-members": "^1.15.2",
 		"heapdump": "^0.3.15",
