Add the `label-has-control` rule.

--- a/test/fixture/.markuplintrc
+++ b/test/fixture/.markuplintrc
@@ -13,6 +13,7 @@
 		"id-duplication": true,
 		"ineffective-attr": true,
 		"invalid-attr": true,
+		"label-has-control": true,
 		"landmark-roles": true,
 		"no-boolean-attr-value": true,
 		"permitted-contents": true,
