--- a/website/.gitignore
+++ b/website/.gitignore
@@ -20,7 +20,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Managed in packages/@markuplint/rules
-docs/rules/*.mdx
+docs/rules/*.md
 !docs/rules/.gitkeep
-i18n/ja/docusaurus-plugin-content-docs/current/rules/*.mdx
+i18n/ja/docusaurus-plugin-content-docs/current/rules/*.md
 !i18n/ja/docusaurus-plugin-content-docs/current/rules/.gitkeep
