--- a/test/fixture/.markuplintrc
+++ b/test/fixture/.markuplintrc
@@ -1,26 +1,8 @@
 {
+	"extends": ["markuplint:recommended"],
 	"excludeFiles": ["./008.html"],
 	"rules": {
-		"attr-duplication": true,
-		"attr-value-quotes": { "reason": "For consistency" },
-		"case-sensitive-attr-name": true,
-		"case-sensitive-tag-name": true,
-		"character-reference": true,
-		"class-naming": "/[a-z]+/",
-		"deprecated-attr": true,
-		"deprecated-element": true,
-		"doctype": true,
-		"id-duplication": true,
-		"ineffective-attr": true,
-		"invalid-attr": true,
-		"label-has-control": true,
-		"landmark-roles": true,
-		"no-boolean-attr-value": true,
-		"permitted-contents": true,
-		"require-accessible-name": true,
-		"required-attr": true,
-		"required-h1": true,
-		"wai-aria": true
+		"attr-value-quotes": { "reason": "For consistency" }
 	},
 	"nodeRules": [
 		{
