--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -13,13 +13,23 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "typescript": []
     }
   },
   "rules": {
     "react/display-name": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "import/no-unresolved": [
+      2,
+      {
+        "ignore": ["^@docusaurus/", "^@site/", "^@theme/"]
+      }
+    ]
   },
   "globals": {
-    "React": true
+    "React": true,
+    "JSX": true
   }
 }
