--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "site:start": "yarn site:prebuild; docusaurus start",
     "site:build": "yarn site:prebuild; docusaurus build",
-    "site:prebuild": "node prebuild.js; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';"
+    "site:prebuild": "node prebuild.js; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
+    "site:lint": "prettier --write './**/*{ts,tsx,mdx}' './*{json,rc,js}'; eslint --fix './**/*.{ts,tsx}' './*.{js,ts}'; cd ../; yarn cli './website/**/*.tsx'"
   },
   "author": "Yusuke Hirao",
   "license": "MIT",
