--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
 		"lint-staged": "^13.0.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
+		"prettier-plugin-md-nocjsp": "^1.4.0",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typedoc": "^0.23.21",
