--- a/website/.gitignore
+++ b/website/.gitignore
@@ -20,6 +20,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Managed in packages/@markuplint/rules
+docs/rules.md
 docs/rules/*.md
 !docs/rules/.gitkeep
 i18n/ja/docusaurus-plugin-content-docs/current/rules/*.md
