--- a/website/package.json
+++ b/website/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "site:start": "yarn site:prebuild; docusaurus start",
     "site:build": "yarn site:prebuild; docusaurus build",
-    "site:prebuild": "node prebuild.js; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
+    "site:prebuild": "node prebuild.mjs; npx prettier --write './src/**/*{ts,tsx,json,rc,md,mdx,css,scss}';",
     "site:lint": "prettier --write './**/*{js,ts,tsx,mdx}' './*{json,rc,js}' '!./build/**/*' '!./.docusaurus/**/*'; eslint --fix './**/*.{js,ts,tsx}' './*.{js,ts}' '!./build/**/*' '!./.docusaurus/**/*'; cd ../; yarn cli './website/**/*.tsx'"
   },
   "author": "Yusuke Hirao",
