--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "markuplint",
 	"version": "3.0.0-alpha.6",
-	"description": "A Linter for All Markup Languages.",
+	"description": "A linter for all markup developers",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"private": false,
