--- a/packages/@markuplint/config-presets/package.json
+++ b/packages/@markuplint/config-presets/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/config-presets",
-	"version": "3.0.0-alpha.6",
+	"version": "3.0.0-rc.0",
 	"description": "markuplint config presets",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
