--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/file-resolver",
-	"version": "3.0.0-alpha.6",
+	"version": "3.0.0-rc.0",
 	"description": "The file resolver of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,10 +21,10 @@
 		"@types/node": "^17.0.16"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.0.0-alpha.6",
-		"@markuplint/ml-config": "3.0.0-alpha.6",
-		"@markuplint/ml-core": "3.0.0-alpha.6",
-		"@markuplint/ml-spec": "3.0.0-alpha.6",
+		"@markuplint/ml-ast": "3.0.0-rc.0",
+		"@markuplint/ml-config": "3.0.0-rc.0",
+		"@markuplint/ml-core": "3.0.0-rc.0",
+		"@markuplint/ml-spec": "3.0.0-rc.0",
 		"cosmiconfig": "^7.0.1",
 		"glob": "^8.0.3",
 		"jsonc": "^2.0.0",
