--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-parser",
-	"version": "3.0.0-alpha.6",
+	"version": "3.0.0-rc.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,8 +17,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.0.0-alpha.6",
-		"@markuplint/parser-utils": "3.0.0-alpha.6",
+		"@markuplint/ml-ast": "3.0.0-rc.0",
+		"@markuplint/parser-utils": "3.0.0-rc.0",
 		"parse5": "6",
 		"tslib": "^2.4.0"
 	}
