--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -23,5 +23,8 @@
 		"@markuplint/types": "2.2.1",
 		"tslib": "^2.3.1",
 		"uuid": "^8.3.2"
+	},
+	"peerDependencies": {
+		"@markuplint/ml-core": "2.x"
 	}
 }
