--- a/packages/@markuplint/erb-parser/package.json
+++ b/packages/@markuplint/erb-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/erb-parser",
-	"version": "2.2.4",
+	"version": "2.2.5",
 	"description": "eRuby template parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,8 +16,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "2.2.4",
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/parser-utils": "2.2.3"
+		"@markuplint/html-parser": "2.2.5",
+		"@markuplint/ml-ast": "2.0.1",
+		"@markuplint/parser-utils": "2.2.4"
 	}
 }
