--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/file-resolver",
-	"version": "2.5.6",
+	"version": "2.5.7",
 	"description": "The file resolver of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -21,10 +21,10 @@
 		"@types/node": "^17.0.16"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/ml-config": "2.1.0",
-		"@markuplint/ml-core": "2.3.6",
-		"@markuplint/ml-spec": "2.1.2",
+		"@markuplint/ml-ast": "2.0.1",
+		"@markuplint/ml-config": "2.1.1",
+		"@markuplint/ml-core": "2.3.7",
+		"@markuplint/ml-spec": "2.1.3",
 		"cosmiconfig": "^7.0.1",
 		"glob": "^7.2.0",
 		"jsonc": "^2.0.0",
