--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/parser-utils",
-	"version": "2.2.3",
+	"version": "2.2.4",
 	"description": "Utility module for markuplint parser plugin",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -19,8 +19,8 @@
 		"@types/uuid": "^8.3.4"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/types": "2.2.1",
+		"@markuplint/ml-ast": "2.0.1",
+		"@markuplint/types": "2.2.2",
 		"tslib": "^2.3.1",
 		"uuid": "^8.3.2"
 	},
