--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "2.11.3",
+	"version": "2.11.4",
 	"description": "A Linter for All Markup Languages.",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -25,16 +25,16 @@
 		"execa": "5"
 	},
 	"dependencies": {
-		"@markuplint/create-rule-helper": "2.3.6",
-		"@markuplint/file-resolver": "2.5.6",
-		"@markuplint/html-parser": "2.2.4",
-		"@markuplint/html-spec": "2.9.1",
-		"@markuplint/i18n": "2.1.1",
-		"@markuplint/ml-ast": "2.0.1-dev.20220307.0",
-		"@markuplint/ml-config": "2.1.0",
-		"@markuplint/ml-core": "2.3.6",
-		"@markuplint/ml-spec": "2.1.2",
-		"@markuplint/rules": "2.4.8",
+		"@markuplint/create-rule-helper": "2.3.7",
+		"@markuplint/file-resolver": "2.5.7",
+		"@markuplint/html-parser": "2.2.5",
+		"@markuplint/html-spec": "2.9.2",
+		"@markuplint/i18n": "2.1.2",
+		"@markuplint/ml-ast": "2.0.1",
+		"@markuplint/ml-config": "2.1.1",
+		"@markuplint/ml-core": "2.3.7",
+		"@markuplint/ml-spec": "2.1.3",
+		"@markuplint/rules": "2.4.9",
 		"chokidar": "^3.5.3",
 		"cli-color": "^2.0.2",
 		"debug": "^4.3.4",
