--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -21,7 +21,7 @@
 		"@types/debug": "^4.1.7",
 		"@types/has-yarn": "^1.0.1",
 		"@types/meow": "^6.0.0",
-		"@types/uuid": "^8.3.4",
+		"@types/uuid": "8",
 		"execa": "5"
 	},
 	"dependencies": {
@@ -45,9 +45,9 @@
 		"has-yarn": "2",
 		"meow": "9",
 		"os-locale": "5",
-		"strict-event-emitter": "^0.2.4",
+		"strict-event-emitter": "^0.2.8",
 		"strip-ansi": "6",
-		"tslib": "^2.4.0",
+		"tslib": "^2.4.1",
 		"uuid": "8"
 	}
 }
