--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "@docusaurus/core": "2.2.0",
+    "@docusaurus/plugin-client-redirects": "^2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "gray-matter": "^4.0.3",
