--- a/playground/package.json
+++ b/playground/package.json
@@ -4,43 +4,43 @@
 	"version": "2.0.0-20221129.0",
 	"private": true,
 	"scripts": {
-		"pg:dev": "webpack-dev-server --progress",
-		"pg:build": "webpack --mode production"
+		"pg:dev": "yarn; webpack-dev-server --progress",
+		"pg:build": "yarn; webpack --mode production"
 	},
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/mini-css-extract-plugin": "2.4.0",
+		"@types/mini-css-extract-plugin": "2.5.1",
 		"@types/script-ext-html-webpack-plugin": "2.1.3",
-		"@types/webpack-dev-server": "4.5.0",
-		"autoprefixer": "10.4.0",
-		"babel-loader": "8.2.3",
-		"css-loader": "6.5.1",
-		"cssnano": "5.0.12",
+		"@types/webpack-dev-server": "4.7.2",
+		"autoprefixer": "10.4.13",
+		"babel-loader": "9.1.0",
+		"css-loader": "6.7.3",
+		"cssnano": "5.1.14",
 		"file-loader": "6.2.0",
 		"html-inline-css-webpack-plugin": "1.11.1",
-		"html-loader": "3.0.1",
+		"html-loader": "4.2.0",
 		"html-webpack-plugin": "5.5.0",
 		"json-loader": "0.5.7",
-		"mini-css-extract-plugin": "2.4.5",
-		"monaco-editor-webpack-plugin": "7.0.0",
+		"mini-css-extract-plugin": "2.7.2",
+		"monaco-editor-webpack-plugin": "7.0.1",
 		"postcss-base64": "0.7.1",
-		"postcss-calc": "8.0.0",
-		"postcss-custom-media": "8.0.0",
-		"postcss-gap-properties": "3.0.0",
-		"postcss-loader": "6.2.1",
+		"postcss-calc": "8.2.4",
+		"postcss-custom-media": "9.0.1",
+		"postcss-gap-properties": "3.0.5",
+		"postcss-loader": "7.0.2",
 		"postcss-math": "0.0.10",
-		"sass": "1.45.0",
-		"sass-loader": "12.4.0",
+		"sass": "1.57.0",
+		"sass-loader": "13.2.0",
 		"script-ext-html-webpack-plugin": "2.1.5",
 		"style-loader": "3.3.1",
-		"svelte-loader": "3.1.2",
-		"svelte-preprocess": "4.9.8",
-		"ts-loader": "9.2.6",
+		"svelte-loader": "3.1.4",
+		"svelte-preprocess": "5.0.0",
+		"ts-loader": "9.4.2",
 		"ttf-loader": "1.0.2",
-		"webpack": "5.65.0",
-		"webpack-cli": "4.9.1",
-		"webpack-dev-server": "4.6.0"
+		"webpack": "5.75.0",
+		"webpack-cli": "5.0.1",
+		"webpack-dev-server": "4.11.1"
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "3.0.0-rc.0",
@@ -52,8 +52,8 @@
 		"@markuplint/ml-spec": "3.0.0-rc.0",
 		"@markuplint/parser-utils": "3.0.0-rc.0",
 		"@markuplint/rules": "3.0.0-rc.0",
-		"monaco-editor": "0.31.0",
-		"svelte": "3.44.2",
-		"tslib": "2.3.1"
+		"monaco-editor": "0.34.1",
+		"svelte": "3.55.0",
+		"tslib": "2.4.1"
 	}
 }
