Add getOgImgUrl function

--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
+    "@imgix/js-core": "^3.7.0",
     "@tsconfig/docusaurus": "^1.0.5",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
