--- a/package.json
+++ b/package.json
@@ -114,6 +114,8 @@
 		"lerna": "^6.1.0",
 		"lint-staged": "^13.1.0",
 		"npm-run-all": "^4.1.5",
+		"patch-package": "^6.5.0",
+		"postinstall-postinstall": "^2.1.0",
 		"prettier": "^2.8.1",
 		"prettier-plugin-md-nocjsp": "^1.5.0",
 		"ts-jest": "^29.0.3",
