--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -22,7 +22,8 @@
 		"css-tree": "^2.3.1",
 		"debug": "^4.3.4",
 		"leven": "3",
-		"whatwg-mimetype": "2"
+		"whatwg-mimetype": "2",
+		"patch-package": "^6.5.0"
 	},
 	"devDependencies": {
 		"@types/bcp-47": "1",
