Fix eslintrc and command

--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -39,5 +39,6 @@
         "import/no-named-as-default-member": 0
       }
     }
-  ]
+  ],
+  "ignorePatterns": ["./build/**/*", "./.docusaurus/**/*"]
 }
