Add textlint and settings

--- a/package.json
+++ b/package.json
@@ -124,6 +124,12 @@
 		"postinstall-postinstall": "^2.1.0",
 		"prettier": "^2.8.1",
 		"prettier-plugin-md-nocjsp": "^1.5.0",
+		"textlint": "^12.2.4",
+		"textlint-filter-rule-comments": "^1.2.2",
+		"textlint-rule-preset-ja-spacing": "^2.2.0",
+		"textlint-rule-preset-ja-technical-writing": "^7.0.0",
+		"textlint-rule-preset-japanese": "^7.0.0",
+		"textlint-rule-preset-jtf-style": "^2.3.13",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typedoc": "^0.23.23",
