--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"apidoc": "typedoc --ignoreCompilerErrors --exclude '**/*+(index|.spec|.e2e|.d).ts,node_modules/**/*' --mode file --out apidoc --media packages/markuplint/media --readme ./packages/markuplint/README.md ./packages/markuplint/",
 		"release": "lerna publish --exact",
 		"release:next": "lerna publish --dist-tag next --exact --force-publish",
-		"release:canary": "lerna publish --dist-tag dev --exact --canary",
+		"release:canary": "lerna publish --preid dev --canary --exact --force-publish",
 		"prerelease": "yarn build; yarn test",
 		"prepare": "husky install",
 		"spellcheck": "cspell --no-progress --show-suggestions \"**\""
