--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-parser",
-	"version": "3.0.0-rc.5",
+	"version": "3.0.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -18,7 +18,7 @@
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/parser-utils": "3.0.0-rc.5",
+		"@markuplint/parser-utils": "3.0.0",
 		"parse5": "7.1.2",
 		"tslib": "^2.4.1"
 	}
