--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-config",
-	"version": "3.0.0-rc.5",
+	"version": "3.0.0",
 	"description": "JSON Schema and TypeScript types of markuplint configure JSON",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -20,7 +20,7 @@
 		"@types/mustache": "^4.2.2"
 	},
 	"dependencies": {
-		"@markuplint/selector": "3.0.0-rc.5",
+		"@markuplint/selector": "3.0.0",
 		"deepmerge": "^4.2.2",
 		"is-plain-object": "^5.0.0",
 		"mustache": "^4.2.0"
