--- a/packages/@markuplint/vue-parser/package.json
+++ b/packages/@markuplint/vue-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/vue-parser",
-	"version": "3.0.0-rc.5",
+	"version": "3.0.0",
 	"description": "Vue parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,9 +16,9 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "3.0.0-rc.5",
+		"@markuplint/html-parser": "3.0.0",
 		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/parser-utils": "3.0.0-rc.5",
+		"@markuplint/parser-utils": "3.0.0",
 		"tslib": "^2.4.1",
 		"vue-eslint-parser": "^9.1.0"
 	}
