Change ESLint setting on website.

--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -34,6 +34,12 @@
   },
   "overrides": [
     {
+      "files": ["./*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": 0
+      }
+    },
+    {
       "files": ["./*.mjs"],
       "rules": {
         "import/no-named-as-default-member": 0
