--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/remark-plugin-npm2yarn": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "gray-matter": "^4.0.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
