--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -42,8 +42,10 @@
 		"eastasianwidth": "^0.2.0",
 		"enquirer": "^2.3.6",
 		"get-stdin": "8",
+		"gray-matter": "^4.0.3",
 		"has-yarn": "2",
 		"meow": "9",
+		"node-fetch": "2",
 		"os-locale": "5",
 		"strict-event-emitter": "^0.2.8",
 		"strip-ansi": "6",
