Add the `require-datetime` rule.

--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -25,6 +25,7 @@
 		"@markuplint/ml-spec": "3.0.1",
 		"@markuplint/types": "3.0.0",
 		"@ungap/structured-clone": "^1.0.1",
+		"chrono-node": "^2.5.0",
 		"debug": "^4.3.4",
 		"html-entities": "^2.3.3",
 		"tslib": "^2.4.1"
