--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -18,14 +18,14 @@
 	},
 	"dependencies": {
 		"bcp-47": "1",
-		"css-tree": "1",
+		"css-tree": "^2.3.1",
 		"debug": "^4.3.4",
 		"leven": "3",
 		"whatwg-mimetype": "2"
 	},
 	"devDependencies": {
 		"@types/bcp-47": "1",
-		"@types/css-tree": "1",
+		"@types/css-tree": "^2.0.1",
 		"@types/debug": "^4.1.7",
 		"@types/whatwg-mimetype": "2"
 	}
