--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -1,6 +1,9 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"module": "NodeNext",
+		"target": "ES2020",
+		"resolveJsonModule": true,
 		"composite": true,
 		"outDir": "./lib",
 		"rootDir": "./src"
