Add `fromJSX` API.

--- a/packages/@markuplint/pretenders/package.json
+++ b/packages/@markuplint/pretenders/package.json
@@ -14,5 +14,12 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "tsc --build --clean"
+	},
+	"devDependencies": {
+		"@markuplint/ml-config": "3.1.0"
+	},
+	"dependencies": {
+		"@markuplint/parser-utils": "3.1.0",
+		"typescript": "^4.9.4"
 	}
 }
