--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-core",
-	"version": "3.1.0",
+	"version": "3.2.0",
 	"description": "The core module of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -20,18 +20,18 @@
 		"./lib/configs.js": "./lib/configs.browser.js"
 	},
 	"dependencies": {
-		"@markuplint/config-presets": "3.1.0",
-		"@markuplint/i18n": "3.0.0-rc.5",
+		"@markuplint/config-presets": "3.2.0",
+		"@markuplint/i18n": "3.2.0",
 		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/ml-config": "3.1.0",
-		"@markuplint/ml-spec": "3.1.0",
-		"@markuplint/parser-utils": "3.1.0",
-		"@markuplint/selector": "3.1.0",
+		"@markuplint/ml-config": "3.2.0",
+		"@markuplint/ml-spec": "3.2.0",
+		"@markuplint/parser-utils": "3.2.0",
+		"@markuplint/selector": "3.2.0",
 		"debug": "^4.3.4",
 		"tslib": "^2.4.1"
 	},
 	"devDependencies": {
-		"@markuplint/html-parser": "3.1.0",
+		"@markuplint/html-parser": "3.2.0",
 		"@types/debug": "^4.1.7"
 	}
 }
