--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "markuplint",
-	"version": "3.1.0",
+	"version": "3.2.0",
 	"description": "A linter for all markup developers",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
@@ -25,16 +25,16 @@
 		"execa": "5"
 	},
 	"dependencies": {
-		"@markuplint/create-rule-helper": "3.1.0",
-		"@markuplint/file-resolver": "3.1.0",
-		"@markuplint/html-parser": "3.1.0",
-		"@markuplint/html-spec": "3.1.0",
-		"@markuplint/i18n": "3.0.0-rc.5",
+		"@markuplint/create-rule-helper": "3.2.0",
+		"@markuplint/file-resolver": "3.2.0",
+		"@markuplint/html-parser": "3.2.0",
+		"@markuplint/html-spec": "3.2.0",
+		"@markuplint/i18n": "3.2.0",
 		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/ml-config": "3.1.0",
-		"@markuplint/ml-core": "3.1.0",
-		"@markuplint/ml-spec": "3.1.0",
-		"@markuplint/rules": "3.1.0",
+		"@markuplint/ml-config": "3.2.0",
+		"@markuplint/ml-core": "3.2.0",
+		"@markuplint/ml-spec": "3.2.0",
+		"@markuplint/rules": "3.2.0",
 		"chokidar": "^3.5.3",
 		"cli-color": "^2.0.3",
 		"debug": "^4.3.4",
