--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -11,6 +11,9 @@
 	"publishConfig": {
 		"access": "public"
 	},
+	"typedoc": {
+		"entryPoint": "./src/index.ts"
+	},
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --build --watch",
