--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -8,6 +8,9 @@
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
+	"typedoc": {
+		"entryPoint": "./src/index.ts"
+	},
 	"bin": {
 		"markuplint": "bin/markuplint"
 	},
