--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "latest"
 	},
 	"dependencies": {
+		"@markuplint/cache": "0.0.0",
 		"@markuplint/html-parser": "3.1.0",
 		"@markuplint/ml-ast": "3.0.0-rc.5",
 		"@markuplint/ml-config": "3.1.0",
