Fix header layout in certain screen widths

--- a/website/.stylelintrc
+++ b/website/.stylelintrc
@@ -4,6 +4,12 @@
   "rules": {
     "string-quotes": "single",
     "declaration-colon-newline-after": null,
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "value-keyword-case": [
+      "lower",
+      {
+        "camelCaseSvgKeywords": true
+      }
+    ]
   }
 }
