--- a/packages/@markuplint/file-resolver/package.json
+++ b/packages/@markuplint/file-resolver/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/file-resolver",
-	"version": "3.2.0",
+	"version": "3.3.0",
 	"description": "The file resolver of markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -24,11 +24,11 @@
 		"@types/node": "latest"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "3.2.0",
-		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/ml-config": "3.2.0",
-		"@markuplint/ml-core": "3.2.0",
-		"@markuplint/ml-spec": "3.2.0",
+		"@markuplint/html-parser": "3.3.0",
+		"@markuplint/ml-ast": "3.0.0",
+		"@markuplint/ml-config": "3.3.0",
+		"@markuplint/ml-core": "3.3.0",
+		"@markuplint/ml-spec": "3.3.0",
 		"cosmiconfig": "^8.0.0",
 		"glob": "^8.0.3",
 		"jsonc": "^2.0.0",
