--- a/packages/@markuplint/liquid-parser/package.json
+++ b/packages/@markuplint/liquid-parser/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/liquid-parser",
-	"version": "3.2.0",
+	"version": "3.3.0",
 	"description": "Liquid template parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -16,8 +16,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/html-parser": "3.2.0",
-		"@markuplint/ml-ast": "3.0.0-rc.5",
-		"@markuplint/parser-utils": "3.2.0"
+		"@markuplint/html-parser": "3.3.0",
+		"@markuplint/ml-ast": "3.0.0",
+		"@markuplint/parser-utils": "3.3.0"
 	}
 }
