--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-spec",
-	"version": "3.2.0",
+	"version": "3.3.0",
 	"description": "Types and schema that specs of the Markup languages for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -25,13 +25,13 @@
 		"schema": "run-s schema:*"
 	},
 	"dependencies": {
-		"@markuplint/ml-ast": "3.0.0-rc.5",
+		"@markuplint/ml-ast": "3.0.0",
 		"dom-accessibility-api": "^0.5.14",
 		"tslib": "^2.4.1"
 	},
 	"devDependencies": {
-		"@markuplint/test-tools": "3.0.0-rc.5",
-		"@markuplint/types": "3.1.0",
+		"@markuplint/test-tools": "3.0.0",
+		"@markuplint/types": "3.2.0",
 		"json-schema-to-typescript": "^11.0.2"
 	}
 }
