Add "HTML" to the description

--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "markuplint",
 	"version": "3.3.1",
-	"description": "A linter for all markup developers",
+	"description": "An HTML linter for all markup developers",
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"private": false,
