--- a/packages/@markuplint/types/package.json
+++ b/packages/@markuplint/types/package.json
@@ -30,6 +30,7 @@
 		"@types/bcp-47": "1",
 		"@types/css-tree": "^2.0.1",
 		"@types/debug": "^4.1.7",
-		"@types/whatwg-mimetype": "2"
+		"@types/whatwg-mimetype": "2",
+		"type-fest": "^3.6.1"
 	}
 }
