--- a/packages/@markuplint/ml-config/package.json
+++ b/packages/@markuplint/ml-config/package.json
@@ -26,6 +26,7 @@
 		"@markuplint/selector": "3.4.0",
 		"deepmerge": "^4.2.2",
 		"is-plain-object": "^5.0.0",
-		"mustache": "^4.2.0"
+		"mustache": "^4.2.0",
+		"type-fest": "^3.6.1"
 	}
 }
