--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -33,10 +33,12 @@
 		"@markuplint/parser-utils": "3.4.0",
 		"@markuplint/selector": "3.4.0",
 		"debug": "^4.3.4",
+		"is-plain-object": "^5.0.0",
 		"tslib": "^2.4.1"
 	},
 	"devDependencies": {
 		"@markuplint/html-parser": "3.3.0",
-		"@types/debug": "^4.1.7"
+		"@types/debug": "^4.1.7",
+		"type-fest": "^3.6.1"
 	}
 }
