Prefer readonly params @markuplint/ml-ast

--- a/.eslintrc
+++ b/.eslintrc
@@ -150,7 +150,8 @@
 				"packages/@markuplint/types/**/*.ts",
 				"packages/@markuplint/ml-config/**/*.ts",
 				"packages/@markuplint/ml-spec/**/*.ts",
-				"packages/@markuplint/selector/**/*.ts"
+				"packages/@markuplint/selector/**/*.ts",
+				"packages/@markuplint/ml-ast/**/*.ts"
 			],
 			"rules": {
 				"@typescript-eslint/prefer-readonly-parameter-types": [
