Prefer readonly params @markuplint/i18n

--- a/.eslintrc
+++ b/.eslintrc
@@ -151,7 +151,8 @@
 				"packages/@markuplint/ml-config/**/*.ts",
 				"packages/@markuplint/ml-spec/**/*.ts",
 				"packages/@markuplint/selector/**/*.ts",
-				"packages/@markuplint/ml-ast/**/*.ts"
+				"packages/@markuplint/ml-ast/**/*.ts",
+				"packages/@markuplint/i18n/**/*.ts"
 			],
 			"rules": {
 				"@typescript-eslint/prefer-readonly-parameter-types": [
