--- a/packages/@markuplint/parser-utils/package.json
+++ b/packages/@markuplint/parser-utils/package.json
@@ -19,7 +19,8 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
-		"@types/uuid": "^9.0.0"
+		"@types/uuid": "^9.0.0",
+		"type-fest": "^3.7.0"
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "3.0.0",
